--- a/src/Makefile
+++ b/src/Makefile
@@ -7,19 +7,19 @@ CFLAGS = -Wall -O2
 OBJS = csapp.o
 LIBS = -lpthread
 
-all:tiny base starter concurrent optimize sbuf
+all:tiny mp starter mt tp
 
 tiny:$(OBJS) tiny.o
 	$(CC) $(CFLAGS) -o $@ $(OBJS) tiny.o $(LIBS)
 
-base:$(OBJS) base.o
-	$(CC) $(CFLAGS) -o $@ $(OBJS) base.o $(LIBS)
+mp:$(OBJS) mp.o
+	$(CC) $(CFLAGS) -o $@ $(OBJS) mp.o $(LIBS)
 
-concurrent:$(OBJS) concurrent.o
-	$(CC) $(CFLAGS) -o $@ $(OBJS) concurrent.o $(LIBS)
+mt:$(OBJS) mt.o
+	$(CC) $(CFLAGS) -o $@ $(OBJS) mt.o $(LIBS)
 
-optimize:$(OBJS) sbuf.o optimize.o
-	$(CC) $(CFLAGS) -o $@ $(OBJS) sbuf.o optimize.o $(LIBS)
+tp:$(OBJS) sbuf.o tp.o
+	$(CC) $(CFLAGS) -o $@ $(OBJS) sbuf.o tp.o $(LIBS)
 
 starter:
 	cd cgi-bin && $(MAKE) all
@@ -29,6 +29,6 @@ starter:
 
 .PHONY:clean
 clean:
-	rm -f *.o tiny base starter concurrent optimize sbuf
+	rm -f *.o starter tiny mp  mt tp sbuf
 	cd cgi-bin && $(MAKE) clean
 
