--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -Wall -O2
 OBJS = csapp.o
 LIBS = -lpthread
 
-all:tiny mp starter mt tp
+all:tiny mp starter mt tp dl
 
 tiny:$(OBJS) tiny.o
 	$(CC) $(CFLAGS) -o $@ $(OBJS) tiny.o $(LIBS)
@@ -21,6 +21,9 @@ mt:$(OBJS) mt.o
 tp:$(OBJS) sbuf.o tp.o
 	$(CC) $(CFLAGS) -o $@ $(OBJS) sbuf.o tp.o $(LIBS)
 
+dl:$(OBJS) sbuf.o dl.o
+	$(CC) $(CFLAGS) -o $@ $(OBJS) sbuf.o dl.o $(LIBS) -ldl
+
 starter:
 	cd cgi-bin && $(MAKE) all
 
@@ -29,6 +32,6 @@ starter:
 
 .PHONY:clean
 clean:
-	rm -f *.o starter tiny mp  mt tp sbuf
+	rm -f *.o starter tiny mp mt tp dl sbuf
 	cd cgi-bin && $(MAKE) clean
 
